--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img  class="logo" alt="gerador de senha logo" srcset="/imagens/logo.png">
+    <h1 class="logo">Gerador de Senha</h1>
 
     <main class="container-input">
         <span>Tamanho <span id="valor"></span> caracteres</span>
